--- a/net-config-bridge.yaml
+++ b/net-config-bridge.yaml
@@ -53,7 +53,6 @@ resources:
                   primary: true
 
 outputs:
-  config_id:
-    description: The ID of the OsNetConfigImpl resource.
-    value:
-      {get_resource: OsNetConfigImpl}
+  OS::stack_id:
+    description: The OsNetConfigImpl resource.
+    value: {get_resource: OsNetConfigImpl}
