--- a/swift-storage.yaml
+++ b/swift-storage.yaml
@@ -141,7 +141,7 @@ resources:
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
     properties:
-      config: {get_attr: [NetworkConfig, config_id]}
+      config: {get_resource: NetworkConfig}
       server: {get_resource: SwiftStorage}
 
   SwiftStorageDeploy:
