--- a/net-config-bond.yaml
+++ b/net-config-bond.yaml
@@ -60,7 +60,6 @@ resources:
                       name: nic2
 
 outputs:
-  config_id:
-    description: The ID of the OsNetConfigImpl resource.
-    value:
-      {get_resource: OsNetConfigImpl}
+  OS::stack_id:
+    description: The OsNetConfigImpl resource.
+    value: {get_resource: OsNetConfigImpl}
