--- a/net-config-noop.yaml
+++ b/net-config-noop.yaml
@@ -34,7 +34,6 @@ resources:
       config:
 
 outputs:
-  config_id:
-    description: The ID of the OsNetConfigImpl resource.
-    value:
-      {get_resource: OsNetConfigImpl}
+  OS::stack_id:
+    description: The OsNetConfigImpl resource.
+    value: {get_resource: OsNetConfigImpl}
