Map Ceilometer services to isolated networks
This change adds the parameters to specify which networks the Ceilometer
and MongoDB servers listen on. It is set to the internal_api network if
present, and reverts to the default Undercloud 'ctlplane' network if not.

Change-Id: Ib646e4a34496966f9b1d454f04d07bf95543517f

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -66,3 +66,5 @@ parameter_defaults:
   # Mapping of service_name -> network name.
   ServiceNetMap:
     NeutronLocalIp: tenant
+    CeilometerApiNetwork: internal_api
+    MongoDbNetwork: internal_api
