--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -802,7 +802,7 @@ resources:
                 keystone::admin_bind_host: {get_input: controller_host}
                 keystone::debug: {get_input: debug}
                 # MongoDB
-                mongodb::server::bind_ip: {get_input: controller_host}
+                mongodb::server::bind_ip: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, MongoDbNetwork]}]}
                 # MySQL
                 admin_password: {get_input: admin_password}
                 enable_galera: {get_input: enable_galera}
@@ -854,7 +854,7 @@ resources:
                 ceilometer::rabbit_use_ssl: {get_input: rabbit_client_use_ssl}
                 ceilometer::rabbit_port: {get_input: rabbit_client_port}
                 ceilometer::debug: {get_input: debug}
-                ceilometer::api::host: {get_input: controller_host}
+                ceilometer::api::host: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, CeilometerApiNetwork]}]}
                 ceilometer::api::keystone_password: {get_input: ceilometer_password}
                 ceilometer::api::keystone_auth_uri: {get_input: keystone_auth_uri}
                 ceilometer::api::keystone_identity_uri: {get_input: keystone_identity_uri}
