--- a/network/config/bond-with-vlans/controller.yaml
+++ b/network/config/bond-with-vlans/controller.yaml
@@ -2,7 +2,7 @@ heat_template_version: 2015-04-30
 
 description: >
   Software Config to drive os-net-config with 2 bonded nics on a bridge
-  with a VLANs attached for the controller role.
+  with VLANs attached for the controller role.
 
 parameters:
   ExternalIpSubnet:
