--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -746,10 +746,10 @@ resources:
 
                 # Glance
                 glance::api::bind_port: {get_input: glance_port}
-                glance::api::bind_host: {get_input: controller_host}
+                glance::api::bind_host: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, GlanceApiNetwork]}]}
                 glance::api::auth_uri: {get_input: keystone_auth_uri}
                 glance::api::identity_uri: {get_input: keystone_identity_uri}
-                glance::api::registry_host: {get_input: controller_host}
+                glance::api::registry_host: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, GlanceRegistryNetwork]}]}
                 glance::api::keystone_password: {get_input: glance_password}
                 glance::api::debug: {get_input: debug}
                 # used to construct glance_api_servers
@@ -761,7 +761,7 @@ resources:
                 glance::api::database_connection: {get_input: glance_dsn}
                 glance::registry::keystone_password: {get_input: glance_password}
                 glance::registry::database_connection: {get_input: glance_dsn}
-                glance::registry::bind_host: {get_input: controller_host}
+                glance::registry::bind_host: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, GlanceRegistryNetwork]}]}
                 glance::registry::auth_uri: {get_input: keystone_auth_uri}
                 glance::registry::identity_uri: {get_input: keystone_identity_uri}
                 glance::registry::debug: {get_input: debug}
