Map Neutron services to isolated networks
This change adds parameters to specify which network the Neutron API should
use. If the internal_api network exists, Neutron will bind to the IP on that
network, otherwise the Undercloud 'ctlplane' network will be used. The
network that the Neutron API is bound to can be overridden in an environment
file.

Change-Id: I11bcebba3a22e8850095250a2ddfaf972339476b

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -74,3 +74,4 @@ parameter_defaults:
     GlanceRegistryNetwork: internal_api
     KeystoneAdminApiNetwork: internal_api
     KeystonePublicApiNetwork: external
+    NeutronApiNetwork: internal_api
