Map Heat services to isolated networks
This change adds parameters to specify which networks the Heat services
will use. If the internal_api network exists, the Heat API, Heat Cloud
Formations, and Heat Cloudwatch services will bind to the IP address on
that network, otherwise the services will default to the IP on the
Undercloud 'ctlplane' network.

Change-Id: I5febe1b9071600b43fa76c6cf415db83cad472ab

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -75,3 +75,6 @@ parameter_defaults:
     KeystoneAdminApiNetwork: internal_api
     KeystonePublicApiNetwork: external
     NeutronApiNetwork: internal_api
+    HeatApiNetwork: internal_api
+    HeatApiCfnNetwork: internal_api
+    HeatApiCloudwatchNetwork: internal_api
