--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -783,9 +783,9 @@ resources:
                 heat::auth_uri: {get_input: keystone_auth_uri}
                 heat::identity_uri: {get_input: keystone_identity_uri}
                 heat::keystone_password: {get_input: heat_password}
-                heat::api::bind_host: {get_input: controller_host}
-                heat::api_cloudwatch::bind_host: {get_input: controller_host}
-                heat::api_cfn::bind_host: {get_input: controller_host}
+                heat::api::bind_host: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, HeatApiNetwork]}]}
+                heat::api_cloudwatch::bind_host: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, HeatApiCloudwatchNetwork]}]}
+                heat::api_cfn::bind_host: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, HeatApiCfnNetwork]}]}
                 heat::database_connection: {get_input: heat_dsn}
                 heat::instance_user: heat-admin
                 heat::debug: {get_input: debug}
