--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -78,3 +78,5 @@ parameter_defaults:
     HeatApiNetwork: internal_api
     HeatApiCfnNetwork: internal_api
     HeatApiCloudwatchNetwork: internal_api
+    NovaApiNetwork: internal_api
+    NovaMetadataNetwork: internal_api
