Make all-nodes Ip networks configurable
This patch adds a new NetIpListMap abstraction which we can use
to make the all-nodes-config IP list network assignments
configurable. Ip address lists for all overcloud services
which require IPs were added to all-nodes-config so
that puppet manifests can be directly supplied the
correct network list for each service.

Change-Id: I209f2b4f97a4bb78648c54813dad8615770bcf1a

--- a/all-nodes-config.yaml
+++ b/all-nodes-config.yaml
@@ -16,6 +16,40 @@ parameters:
     type: comma_delimited_list
   controller_names:
     type: comma_delimited_list
+  rabbit_node_ips:
+    type: comma_delimited_list
+  mongo_node_ips:
+    type: comma_delimited_list
+  redis_node_ips:
+    type: comma_delimited_list
+  memcache_node_ips:
+    type: comma_delimited_list
+  mysql_node_ips:
+    type: comma_delimited_list
+  horizon_node_ips:
+    type: comma_delimited_list
+  heat_api_node_ips:
+    type: comma_delimited_list
+  swift_proxy_node_ips:
+    type: comma_delimited_list
+  ceilometer_api_node_ips:
+    type: comma_delimited_list
+  nova_api_node_ips:
+    type: comma_delimited_list
+  nova_metadata_node_ips:
+    type: comma_delimited_list
+  glance_api_node_ips:
+    type: comma_delimited_list
+  glance_registry_node_ips:
+    type: comma_delimited_list
+  cinder_api_node_ips:
+    type: comma_delimited_list
+  neutron_api_node_ips:
+    type: comma_delimited_list
+  keystone_public_api_node_ips:
+    type: comma_delimited_list
+  keystone_admin_api_node_ips:
+    type: comma_delimited_list
 
 resources:
 
