Specify mariadb package name to meet puppetlabs-mysql requirement
Specify the MariaDB package name to meet new requirement from
puppetlabs-mysql introduce but latest commit[1][2]

[1]
https://github.com/puppetlabs/puppetlabs-mysql/commit/4bab65edcb98f82f87a4414840fe90ab81b6cea3
[2]
https://github.com/puppetlabs/puppetlabs-mysql/commit/29788fb4c492865b5246daef6cbefe99c4aa067d

Change-Id: I1b855934a88ceb4995ca1a44394db6b7a20c038d

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -92,6 +92,7 @@ pacemaker::corosync::manage_fw: false
 horizon::allowed_hosts: '*'
 
 mysql::server::manage_config_file: true
+mysql::server::package_name: mariadb-galera-server
 
 
 tripleo::loadbalancer::galera_master_ip: "%{hiera('bootstrap_nodeid_ip')}"
