--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -24,6 +24,7 @@ resource_registry:
 
   # TripleO overcloud networks
   OS::TripleO::Network: network/networks.yaml
+  OS::TripleO::VipConfig: vip-config.yaml
 
   OS::TripleO::Network::External: network/noop.yaml
   OS::TripleO::Network::InternalApi: network/noop.yaml
