Use heat inputs for network port settings
This patch updates the controller and compute roles
so that we use get_input in the software configuration
instead of calling get_attr/get_param there.

Change-Id: I1dc11987b4ea3c37775b14fbdddb75588499e9bb

--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -365,7 +365,7 @@ resources:
                 neutron::rabbit_port: {get_input: rabbit_client_port}
                 neutron_flat_networks: {get_input: neutron_flat_networks}
                 neutron_host: {get_input: neutron_host}
-                neutron::agents::ml2::ovs::local_ip: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, NeutronLocalIp]}]}
+                neutron::agents::ml2::ovs::local_ip: {get_input: neutron_local_ip}
 
                 neutron_tenant_network_type: {get_input: neutron_tenant_network_type}
                 neutron_tunnel_types: {get_input: neutron_tunnel_types}
@@ -421,7 +421,7 @@ resources:
               - {get_param: GlancePort}
         neutron_flat_networks: {get_param: NeutronFlatNetworks}
         neutron_host: {get_param: NeutronHost}
-        neutron_local_ip: {get_attr: [NovaCompute, networks, ctlplane, 0]}
+        neutron_local_ip: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, NeutronLocalIp]}]}
         neutron_tenant_network_type: {get_param: NeutronNetworkType}
         neutron_tunnel_types: {get_param: NeutronTunnelTypes}
         neutron_network_vlan_ranges: {get_param: NeutronNetworkVLANRanges}
